<resources>
    <string name="app_name">Euronet Health</string>
    <string name="title_activity_device">Euronet Health</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="requireStar_text"><font fgcolor='#FFFF3B30'>*</font></string> <!--red-->
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="connect">Connect</string>
    <string name="pair">Pair</string>
    <string name="device_name">Device Name</string>
    <string name="device_addrees">Device Addrees:</string>
    <string name="device_state">Device State:</string>
    <string name="device_type">Device Type:</string>
    <string name="device_uuid">Device UUID</string>
    <string name="device_rssi">Device RSSI:</string>

    <string name="bond_none">Device BOND NONE</string>
    <string name="bond_bonding">Device BOND BONDING</string>
    <string name="bond_bonded">Device BOND BONDED</string>
    <string name="custom_title">Connecting..</string>
    <string name="title_services_list">Servies List</string>
    <string name="open">Open</string>
    <string name="heart_rate_mesrument">Heart rate mesrument</string>
    <string name="bond">Bond</string>
    <string name="disconnect">Disconnect</string>
    <string name="batteryValue">Battery value</string>
    <string name="stop_read">Stop read</string>
    <string name="device_information">Device Information</string>
    <string name="services_list">Services list</string>
    <string name="communicate">Communicate</string>
    <string name="battery_value">Battery value</string>
    <string name="nordic_uart">Nordic UART</string>
    <string name="heart_rate">Heart rate</string>
    <string name="update_firmware">Update Firmware</string>
    <string name="ecg_listening">ECG listening</string>
    <string name="activity_listening">Activity listening</string>
    <string name="rr_listening">RR listening</string>
    <string name="motion_listening">Motion listening</string>
    <string name="bioz_listening">BIOZ Listening</string>
    <string name="ppg_listening">PPG Listening</string>
    <string name="step_monitoring">Step monitoring</string>
    <string name="step_data">Step data:</string>
    <string name="about">About</string>
    <string name="check_for_updates">Check for updates..</string>
    <string name="save_measured_data">Save measured data (after finish monitoring)</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="title_activity_teszt">Teszt</string>
    <string name="title_ECG">ECG</string>
    <string name="title_PPG">PPG</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_device_main">DeviceMainActivity</string>
    <string name="device_off">Device Off</string>
    <string name="bluetooth_disconnect">Bluetooth disconnect</string>
    <string name="home">Home</string>
    <string name="account">Account</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">Or register with </string>
    <string name="register">Register</string>

    <string name="facebook_app_id">694912090937924</string>
    <string name="fb_login_protocol_scheme">fb694912090937924</string>
    <string name="device">Device</string>
    <string name="questionnaire">Questionnaire</string>
    <string name="groups">Groups</string>
    <string name="allow">Allow</string>
    <string name="denied">Denied</string>
    <string name="company_name">Euronet Magyarország Zrt.</string>
    <string name="no_device_connect">No device connect!</string>
    <string name="name">Name</string>
    <string name="contact">Contact</string>
    <string name="feedback">Feedback</string>
    <string name="send">Send</string>
    <string name="please_wait">Please wait the connect...</string>
    <string name="search_device">Search device...</string>
    <string name="tesztecske">sdfsdf</string>
    <string name="connecting">Connecting device...</string>
    <string name="connecting_failed">Connecting failed!</string>
    <string name="connecting_succes">Connected successfully</string>
    <string name="logout">Logout</string>
    <string name="login_ok">Login_OK</string>
    <string name="connecting_reconnect">Please wait the reconnect...</string>
    <string name="login_error">Login_ERROR</string>
    <string name="serverNot_available">Server not available, please research!</string>
    <string name="server_not_available_try_res">Server not available, please research or try again!</string>
    <string name="bluetoothDesabled">Bluetooth is not enabled!</string>
    <string name="pairWait">Pairing...!</string>
    <string name="firmware_update">FIRMWARE UPDATE</string>
    <string name="user_email">User email</string>
    <string name="moving_avg">Moving AVG</string>
    <string name="autoregression">Autoregression</string>
    <string name="status">STATUS</string>
    <string name="step_counter_set_zero">Step counter set zero</string>
    <string name="vibra">Vibra</string>
    <string name="time">Time</string>
    <string name="time_offset">Time Offset</string>
    <string name="five">FIVE</string>
    <string name="one">ONE</string>
    <string name="time_base">Time base</string>
    <string name="off">OFF</string>
    <string name="deviceaddress">Deviceaddress</string>
    <string name="devicetype">DeviceType</string>
    <string name="devicemanufacturer">DeviceManufacturer</string>
    <string name="devicename">Devicename</string>
    <string name="todo">TODO</string>
    <string name="please_wait_two">Please wait..</string>
    <string name="user_name">User name</string>
    <string name="refresh">Refresh</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="done">Done</string>
</resources>
