<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_questionnaire"
        android:icon="@drawable/ic_question_answer"
        android:actionLayout="@layout/notification_frame_layout"
        android:title="@string/questionnaire" />

    <item
        android:id="@+id/navigation_nordic"
        android:icon="@drawable/ecg_icon_15"
        android:actionLayout="@layout/notification_frame_layout"
        android:title="@string/start" />

    <item
        android:id="@+id/navigation_groups"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/action_settings" />

</menu>
